--- a/form/src/App.css
+++ b/form/src/App.css
@@ -1,4 +1,11 @@
 .App {
+  background: rgb(2, 0, 36);
+  background: linear-gradient(
+    90deg,
+    rgba(2, 0, 36, 1) 0%,
+    rgba(99, 9, 121, 1) 35%,
+    rgba(0, 212, 255, 1) 100%
+  );
   height: 100vh;
   display: flex;
   justify-content: center;
